# respighi

./: .gitignore  pyproject.toml
docs/: api.rst  conf.py  index.rst  user_guide.rst
examples/: README.rst  background.py  gwf.py  interpolation.py  scaling.py  test-linear.py
respighi/: __init__.py  cg.py  constants.py  groundwaterflow.py  ilu0.py  inverse.py  pardiso.py  sparse.py  target.py
test/: test_groundwaterflow.py
